--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -42,7 +42,7 @@
 
 section div .profile-title {
   font-size: $font-size-large;
-  letter-spacing: 0.225rem;
+  letter-spacing: 0.2rem;
   transition: color 0.5s;
 }
 
